--- a/CMS-USER-BACKEND/.env
+++ b/CMS-USER-BACKEND/.env
@@ -1,5 +1,6 @@
 HTTP_PORT=8052
 WS_PORT=8050
+WS_PORT_CLIENT=7050
 merchantId=PGTESTPAYUAT
 merchantUserId=MUID123
 saltKey=099eb0cd-02cf-4e2a-8aca-3e6c6aff0399
